<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">BT - WiFi - Hotspot</string>
  <string name="setting_app"> | Setting | </string>
  <string name="set_exit">Exit</string>
  <string name="resetShared">Reset Data</string>
  <string name="action_settings">Settings</string>
  <string name="email_text">Enter Your Email</string>
  <string name="passwd_text">Enter Your Password</string>
  <string name="btn_signin">Sign In</string>
  <string name="ok">OK</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="connSsid">Connected with:</string>
  <string name="lang_text">Languages:</string>
  <string name="radio_en">English</string>
  <string name="radio_it">Italian</string>
  <string name="wait">Please Wait&#8230;</string>
  <string name="logs_tag">BT WiFi Hotspot</string>
  <string name="title_sel_SSID">Wrong SSID!</string>
  <string name="msg_sel_SSID">Please select BT WiFi Hotspot!</string>
  <string name="title_dis_wifi">WiFi Disabled</string>
  <string name="msg_dis_wifi">Do you want to turn on the WiFi?\n\'No\' will quit the application!</string>
  <string name="toast_dis_wifi">BT WiFi: Service has stopped</string>
  <string name="title_cls_app">Closing Application</string>
  <string name="msg_cls_app">Are you sure you want to close the application?</string>
  <string name="title_wrg_pass">Wrong Password</string>
  <string name="msg_wrg_left_sing">Attempt Left!\n\nIf you have forgotten your pass phrase, please Reset the data.</string>
  <string name="msg_wrg_left_plur">Attempts Left!\n\nIf you have forgotten your pass phrase, please Reset the data.</string>
  <string name="enc_title">Password Phrase</string>
  <string name="enc_msg">Input your secret phrase.\n\'Cancel\' no data will be saved.</string>
  <string name="dec_msg">Input your secret phrase to unlock saved login data.</string>
  <string name="data_enc">You have logged in\n\nSession Saved!</string>
  <string name="data_not_enc">You have logged in!</string>
  <string name="connAlarmMgr">BT WiFi: Service Started</string>
  <string name="incorrect">Username and/or Password Incorrect/s</string>
  <string name="logged_in">You have logged in!</string>
  <string name="already_log">You have already logged in!</string>
  <string name="buy_credits">Buy Credits</string>
  <string name="title_confirm">Confirm Resetting Data</string>
  <string name="msg_confirm">Are you sure you want to reset the data?</string>
  <string name="title_send_log">Send Logcat</string>
  <string name="msg_send_log">Do you want to send the application log file to the developer?</string>
  <string name="msg_send_email">Sending Email</string>
  <string name="msg_email_no_client">There is no email client installed.</string>
  <string name="title_empty_field">Error</string>
  <string name="msg_invalid_empty_field">Invalid Email Address!</string>
  <string name="msg_email_empty_field">Email Field is Empty!</string>
  <string name="msg_passwd_empty_field">Password Field is Empty!</string>
  <string name="msg_saved_sess">You have logged in\n\nSession Saved!</string>
  <string name="ask_dec">Decrypt Data</string>
  <string name="title_info">Info</string>
  <string name="msg_res_data">Data Reset\n\nBT WiFi Service has Stopped!</string>
  <string name="msg_res_data_err">Resetting Data Failed</string>
  <string name="msg_send_email_err">There is no email client installed</string>
  <string name="wait_enabling_wifi">Please Wait, WiFi is enabling&#8230;</string>
</resources>
