<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">


  <item
    android:id="@+id/buy_credits"
    android:title="@string/buy_credits"
    android:orderInCategory="1"
    app:showAsAction="never" />

  <item
    android:id="@+id/resetShared"
    android:title="@string/resetShared"
    android:orderInCategory="2"
    app:showAsAction="never" />

  <item android:id="@+id/ask_dec"
    android:title="@string/ask_dec"
    android:orderInCategory="3"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:orderInCategory="4"
    app:showAsAction="never" />

  <item
    android:id="@+id/set_exit"
    android:title="@string/set_exit"
    android:orderInCategory="5"
    app:showAsAction="never" />
</menu>
