<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              tools:context=".SettingActivity"
              android:background="#000000" >

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/lang_text"
    android:id="@+id/langText"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="15dp"
    android:textColor="#ffffff" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#ffffff"
    android:layout_marginTop="5dp" />

  <RadioGroup
    android:id="@+id/radio_group"
    android:layout_width="101dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15sp"
    android:layout_weight="0.03"
    android:layout_marginTop="10dp" >

    <RadioButton
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/radio_en"
      android:id="@+id/rad_english"
      android:background="#000000"
      android:textColor="#ffffff"
      android:clickable="true"
      android:textSize="15sp"
      android:button="@drawable/radiotheme_btn_radio_holo_light" />

    <RadioButton
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/radio_it"
      android:id="@+id/rad_italian"
      android:background="#000000"
      android:layout_marginTop="20sp"
      android:textColor="#ffffff"
      android:clickable="true"
      android:textSize="16sp"
      android:button="@drawable/radiotheme_btn_radio_holo_light" />

  </RadioGroup>

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#ffffff" />

</LinearLayout>